United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7097053 G1: assert(da ? referent->is_oop() : referent->is_oop_or_null()) failed: referenceProcessor.cpp:1054
7097053 : G1: assert(da ? referent->is_oop() : referent->is_oop_or_null()) failed: referenceProcessor.cpp:1054

Details
Type:
Bug
Submit Date:
2011-09-30
Status:
Closed
Updated Date:
2012-12-05
Project Name:
JDK
Resolved Date:
2012-01-23
Component:
hotspot
OS:
generic
Sub-Component:
gc
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
8
Fixed Versions:
hs23

Related Reports
Backport:
Backport:
Backport:
Backport:
Relates:

Sub Tasks

Description
The following nightly test failure was observed:

[2011-09-29T15:10:20.25] # after -XX: or in .hotspotrc:  SuppressErrorAt=/referenceProcessor.cpp:1054
[2011-09-29T15:10:20.25] #
[2011-09-29T15:10:20.25] # A fatal error has been detected by the Java Runtime Environment:
[2011-09-29T15:10:20.25] #
[2011-09-29T15:10:20.25] #  Internal Error (/tmp/jprt/P2/091933.brutisso/source/src/share/vm/memory/referenceProcessor.cpp:1054), pid=15978, tid=8
[2011-09-29T15:10:20.25] #  assert(da ? referent->is_oop() : referent->is_oop_or_null()) failed: Bad referent 0xfffffffb60c0c000 found in Reference 0xfffffffb60a90620 during atomic discovery 
[2011-09-29T15:10:20.25] #
[2011-09-29T15:10:20.25] # JRE version: 7.0-b147
[2011-09-29T15:10:20.25] # Java VM: Java HotSpot(TM) 64-Bit Server VM (23.0-b01-internal-201109270919.brutisso.hs-gc-qsfix-fastdebug mixed mode solaris-sparc compressed oops)
[2011-09-29T15:11:01.17] # Core dump written. Default location: /export/local/55241.JDK7.PROMOTION.VM_solaris-sparcv9_vm__server_mixed_vm.parallel_class_loading.testlist/results/ResultDir/inner-complex/core or core.15978
[2011-09-29T15:11:01.17] #
[2011-09-29T15:11:01.17] # An error report file with more information is saved as:
[2011-09-29T15:11:01.17] # /export/local/55241.JDK7.PROMOTION.VM_solaris-sparcv9_vm__server_mixed_vm.parallel_class_loading.testlist/results/ResultDir/inner-complex/hs_err_pid15978.log
[2011-09-29T15:11:01.17] #
[2011-09-29T15:11:01.17] # If you would like to submit a bug report, please visit:
[2011-09-29T15:11:01.17] #   http://bugreport.sun.com/bugreport/crash.jsp
[2011-09-29T15:11:01.17] #
[2011-09-29T15:11:01.17] Current thread is 8
[2011-09-29T15:11:01.17] Dumping core ...

Test:
runtime/ParallelClassLoading/stress-redefine/freeLock/reflect/inner-complex

Machine:
sc14gd07

Flags:
-d64 -server -Xmixed -XX:+UseG1GC -XX:+PrintGCDetails

Test Directory:
/net/sqenfs-2.us.oracle.com/export2/results/vm/gtee/JDK7/PROMOTION/VM/7u2/b00/2011-09-29/LH/vm/solaris-sparcv9/server/mixed/solaris-sparcv9_vm__server_mixed_vm.parallel_class_loading.testlist

Link:
http://sqeweb.us.oracle.com/nfs/results/vm/gtee/JDK7/PROMOTION/VM/7u2/b00/2011-09-29/LH/vm/solaris-sparcv9/server/mixed/solaris-sparcv9_vm__server_mixed_vm.parallel_class_loading.testlist/analysis.html

Problem is most likely assocated with the recent G1 reference processing code changes.

Rerun scripts are attached

                                    

Comments
EVALUATION

See main CR
                                     
2011-10-22
EVALUATION

http://hg.openjdk.java.net/hsx/hsx22/hotspot/rev/7afaeffa5d9b
                                     
2011-10-12
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-gc/hotspot/rev/811ec3d0833b
                                     
2011-10-04
EVALUATION

During RSet scanning the reference processor was discovering a reference oop whose referent object failed the is_oop() test in the failing assert. It appears that is was being caused by a race between RSet updating (which did not perform reference discovery) and RSet scanning (which did) and so the reference processor could see a referent object that was in the process of being copied. To resolve this issue we have decided to not do reference discovery duing RSet scanning.
                                     
2011-10-04
SUGGESTED FIX

Do not perform reference discovery during RSet scanning. Revert part of the code that was push as part 6484982.
                                     
2011-10-04



Hardware and Software, Engineered to Work Together